log/build_2023-11-28_12-56-07/robu/stderr.log
  File "/home/robu/work/robu_jamben19_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 73
    def timer_callback(self, this.msg):
                                 ^
SyntaxError: invalid syntax

